# KRISHI-EYE_Webapp-India-Innovates_Open-Innovation

./: .dockerignore  .gitignore  ARCHITECTURE.md  COMPREHENSIVE_PROGRESS.md  PRESENTATION.md  README.md  ROADMAP.md  SPEC.md  STACK.md  STATE.md  TECH-STACK.md  deployment-readiness.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  walkthrough.md
Vision Models/: TRAINING_CONTEXT.md  training_context_manifest.csv
apps/ai-service/: .env.example  EVALUATION.md  INTEGRATION.md  pyproject.toml  requirements.txt  test_readiness.py  test_vision.py
apps/ai-service/app/: config.py  main.py
apps/ai-service/app/answer/: service.py
apps/ai-service/app/api/: routes.py  schemas.py
apps/ai-service/app/common/: dependencies.py  errors.py  logging.py  schemas.py  security.py
apps/ai-service/app/history/: service.py
apps/ai-service/app/ingest/: service.py
apps/ai-service/app/moderation/: categories.py  service.py
apps/ai-service/app/providers/: embedding.py  llm.py  rerank.py
apps/ai-service/app/retrieval/: service.py
apps/ai-service/app/storage/: repository.py
apps/ai-service/app/vision/: routes.py  service.py
apps/ai-service/data/: demo_knowledge.json
apps/ai-service/tests/: test_answer_service.py  test_groundedness.py  test_moderation.py  test_retrieval_service.py  test_routes.py  test_schemas.py  test_vision_reliability.py
docs/: PRD_TODO.md  ai-guardrails.md  api-routes.md  authorization-matrix.md  automation-and-tools.md  csp-policy.md  data-retention-policy.md  database-schema.md  demo-data-contract.md  (+5 more)
(+171 files in other folders)
